# vllm-ascend

./: mkdocs.yml  quest_block_select_debug.py
.github/workflows/scripts/: test_config.yaml
csrc/: build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp
csrc/attention/quest_block_select_paged/: quest_block_select_paged_torch_adpt.h
csrc/common/op_host/: split_core.h
csrc/common/op_kernel/: vector_common.h
csrc/quest_block_select_paged/: quest_block_select_paged_torch_adpt.h
csrc/quest_block_select_paged/op_host/: quest_block_select_paged_def.cpp  quest_block_select_paged_tiling.cpp  quest_block_select_paged_tiling.h
csrc/quest_block_select_paged/op_kernel/: quest_block_select_paged.cpp  quest_block_select_paged_tilingkey.h
csrc/quest_prefill_metadata/op_kernel/: quest_prefill_metadata.cpp
csrc/select_infer_attention_score/: select_infer_attention_score_torch_adpt.h
csrc/select_infer_attention_score/op_host/: CMakeLists.txt  fallback_select_infer_attention_score.cpp  flash_attention_infer_tiling.h  select_infer_attention_score_def.cpp  select_infer_attention_score_infershape.cpp  select_infer_attention_score_tiling.cpp  select_infer_attention_score_tiling.h  select_infer_attention_score_tiling_compile_info.h  select_infer_attention_score_tiling_index.h  select_infer_attention_score_tiling_register.cpp
csrc/select_infer_attention_score/op_host/arch32/: select_infer_attention_score_tiling_check.cpp  select_infer_attention_score_tiling_check.h  select_infer_attention_score_tiling_check_consistency.cpp  select_infer_attention_score_tiling_check_existence.cpp  select_infer_attention_score_tiling_check_feature.cpp  select_infer_attention_score_tiling_check_single_para.cpp  select_infer_attention_score_tiling_info_parser.cpp  select_infer_attention_score_tiling_info_parser.h  select_infer_attention_score_tiling_v3.cpp  select_infer_attention_score_tiling_v3.h
csrc/select_infer_attention_score/op_host/op_api/: aclnn_select_infer_attention_score_inner.cpp  aclnn_select_infer_attention_score_inner.h  aclnn_select_infer_attention_score_v4.cpp  aclnn_select_infer_attention_score_v4.h
csrc/select_infer_attention_score/op_kernel/: select_infer_attention_score.cpp  select_infer_attention_score_tilingkey.h  (+1 more)
tests/ut/: test_ascend_config.py
tools/vpp_trace/: analyze_bubbles.py  to_perfetto.py
vllm_ascend/: ascend_config.py  platform.py
vllm_ascend/attention/: attention_v1.py  quest_decode.py  utils.py
vllm_ascend/core/: analytic_chunk_model.py  profiling_chunk_predictor.py  scheduler_analytic_chunk.py  scheduler_kv_fit.py  scheduler_kv_metrics.py  scheduler_profiling_chunk.py
vllm_ascend/ops/: select_attention.py
vllm_ascend/patch/: __init__.py
vllm_ascend/worker/: model_runner_v1.py  npu_input_batch.py  worker.py
(+26 files in other folders)
